Added concatenation method and a small refactor

--- a/AutomatedYTChannel/AutomatedYTChannel.csproj
+++ b/AutomatedYTChannel/AutomatedYTChannel.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
+  </ItemGroup>
+
 </Project>
